# apollo

./: .gitignore  Dockerfile  README.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  ros_entrypoint.sh
Docker/: Dockerfile  ros_setup.sh  turtlebot_setup.sh
ML/: Yolov3.py
apollo_sim_ws/: README.md
apollo_sim_ws/apollo_sim_control/: package.xml  setup.cfg  setup.py
apollo_sim_ws/apollo_sim_description/: CMakeLists.txt  package.xml
apollo_sim_ws/apollo_sim_simulation/: CMakeLists.txt  package.xml
dev_ws/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
dev_ws/log/: latest_build
dev_ws/src/my_package/: package.xml  setup.py
environment/: README.md
example_ws/install/: local_setup.sh  setup.sh
example_ws/log/: latest_build
install/: local_setup.sh  setup.sh
install/my_bot/share/my_bot/: package.bash  package.dsv
install/scout_object_detector/share/scout_object_detector/: package.sh  package.zsh
install/test_detector/share/test_detector/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
intro_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
intro_ws/log/: latest_build
intro_ws/src/apollo_intro/: setup.cfg  setup.py
intro_ws/src/apollo_intro/apollo_intro/: apollo_ros2_onboarding.ipynb  practice_task.py
intro_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
ros_ws/follow_human/: package.xml  setup.py
ros_ws/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
ros_ws/log/: latest_build
ros_ws/src/scout_mini_localization/: CMakeLists.txt
ros_ws/src/scout_mini_simulation/: setup.cfg  setup.py
ros_ws/src/scout_object_detector/: package.xml  setup.py
ros_ws/src/scout_object_detector/launch/: detector.launch.py
ros_ws/src/scout_object_detector/scout_object_detector/: object_detection_node.py
ros_ws/src/task1/: setup.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/my_bot/config/: view_bot.rviz
src/my_bot/description/: gazebo_control.xacro  robot_core.xacro
src/my_bot/launch/: launch_sim.launch.py
src/rslidar_laserscan_converter/: CMakeLists.txt
src/scout_mini_description/: CMakeLists.txt  package.xml
src/scout_mini_description/urdf/: scout_mini_gazebo.urdf.xacro
src/scout_mini_localization/: CMakeLists.txt  package.xml
src/scout_mini_localization/config/: amcl.yaml  nav2_params.yaml  pointcloud_to_laserscan.yaml
src/scout_mini_localization/install/: setup.bash  setup.ps1  setup.sh
src/scout_mini_localization/launch/: localization_launch.py  simulation_complete_launch.py
src/scout_mini_localization/maps/: 4th_floor.pgm  4th_floor.yaml
src/scout_mini_localization/rviz/: localization.rviz
src/scout_mini_msgs/msg/: DistanceMessage.msg
src/scout_mini_navigation/: CMakeLists.txt  README.md  package.xml  package.xml.backup
src/scout_mini_navigation/config/: local_costmap_params.yaml  nav2_params.yaml  planner_params.yaml
src/scout_mini_navigation/documentation/: team1_map_amcl_lifecycle.md  team2_costmaps_planning.md  team3_controllers_behaviors.md
src/scout_mini_navigation/install/: local_setup.sh  setup.sh
src/scout_mini_navigation/install/scout_mini_navigation/share/scout_mini_navigation/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh
src/scout_mini_navigation/launch/: localization.launch.py  nav2.launch.py  team1_gazebo_test.launch.py  team2_gazebo_test.launch.py
src/scout_mini_navigation/rviz/: navigation.rviz
src/scout_mini_navigation/scripts/: activate_nav2.sh
src/scout_mini_perception/: package.xml  setup.cfg  setup.py
src/scout_mini_perception/config/: perception_params.yaml
src/scout_mini_perception/docs/: TEAM1_GUIDE.md  TEAM2_GUIDE.md  TEAM3_GUIDE.md
src/scout_mini_perception/team_resources/: resources.md
src/scout_object_detector/: setup.cfg
test_ws/install/: local_setup.sh  setup.sh
test_ws/log/: latest_build
test_ws/scan_test/: metadata.yaml  scan_test_0.db3
test_ws/src/follow_human/: CMakeLists.txt  setup.py  setup.py.save
test_ws/src/follow_human/follow_human/: follower_controller.py  test_distance_publisher.py
test_ws/src/follow_human/msg/: TrackedObject.msg
test_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
test_ws/src/log/: latest_build
test_ws/src/rslidar_laserscan_converter/: README.md
test_ws/src/scout_mini_localization/: CMakeLists.txt
test_ws/src/scout_mini_localization/config/: amcl.yaml
test_ws/src/scout_mini_localization/install/: setup.zsh
test_ws/src/scout_mini_localization/install/scout_mini_localization/share/scout_mini_localization/: local_setup.sh  package.sh  package.xml
test_ws/src/scout_mini_localization/launch/: .localization_launch.py.swp
test_ws/src/scout_mini_localization/rviz/: localization.rviz
test_ws/src/scout_object_detector/: CMakeLists.txt
test_ws/src/scout_object_detector/msg/: YoloDetection.msg
test_ws/src/scout_object_detector/scout_object_detector/: object_detection_node.py
turtlebot/: README.md
(+1142 files in other folders)
